--- a/app/src/main/res/xml/locale_config.xml
+++ b/app/src/main/res/xml/locale_config.xml
@@ -12,4 +12,5 @@
     <locale android:name="sk"/>
     <locale android:name="sl"/>
     <locale android:name="ro"/>
+    <locale android:name="ja"/>
 </locale-config>
