--- a/app/src/main/res/xml/locale_config.xml
+++ b/app/src/main/res/xml/locale_config.xml
@@ -9,6 +9,7 @@
     <locale android:name="pt-PT"/>
     <locale android:name="pt-BR"/>
     <locale android:name="tr"/>
+    <locale android:name="se"/>
     <locale android:name="sk"/>
     <locale android:name="sl"/>
     <locale android:name="ro"/>
